syntax = "proto3";
option go_package = "fase-4-hf-orch/orch-proto";

// start CLIENT setup
message CreateClientRequest {
  string name = 1;
  string cpf = 2;
  string email = 3;
}

message CreateClientResponse {
  string uuid = 1;
  string name = 2;
  string cpf = 3;
  string email = 4;
  string createdAt = 5;
}

message GetClientByIDRequest { string uuid = 1; }

message GetClientByIDResponse {
  string uuid = 1;
  string name = 2;
  string cpf = 3;
  string email = 4;
  string createdAt = 5;
}

message GetClientByCPFRequest { string cpf = 1; }

message GetClientByCPFResponse {
  string uuid = 1;
  string name = 2;
  string cpf = 3;
  string email = 4;
  string createdAt = 5;
}

service Client {
  rpc GetClientByID(GetClientByIDRequest) returns (GetClientByIDResponse);
  rpc GetClientByCPF(GetClientByCPFRequest) returns (GetClientByCPFResponse);
  rpc CreateClient(CreateClientRequest) returns (CreateClientResponse);
}
// end CLIENT setup

// start VOUCHER setup
message CreateVoucherRequest {
  string code = 1;
  int64 percentage = 2;
  string expiresAt = 3;
}

message CreateVoucherResponse {
  string uuid = 1;
  string code = 2;
  int64 percentage = 3;
  string createdAt = 4;
  string expiresAt = 5;
}

message GetVoucherByIDRequest { string uuid = 1; }

message GetVoucherByIDResponse {
  string uuid = 1;
  string code = 2;
  int64 percentage = 3;
  string createdAt = 4;
  string ExpiresAt = 5;
}

message UpdateVoucherByIDRequest {
  string uuid = 1;
  string code = 2;
  int64 percentage = 3;
  string createdAt = 4;
  string expiresAt = 5;
}

message UpdateVoucherByIDResponse {
  string uuid = 1;
  string code = 2;
  int64 percentage = 3;
  string createdAt = 4;
  string expiresAt = 5;
}

service Voucher {
  rpc CreateVoucher(CreateVoucherRequest) returns (CreateVoucherResponse);
  rpc GetVoucherByID(GetVoucherByIDRequest) returns (GetVoucherByIDResponse);
  rpc UpdateVoucherByID(UpdateVoucherByIDRequest)
      returns (UpdateVoucherByIDResponse);
}
// end VOUCHER setup

// start ORDER setup
message Item {
  string productUuid = 1;
  int64 orderId = 2;
  int64 quantity = 3;
}

message CreateOrderRequest {
  string clientUuid = 1;
  string voucherUuid = 2;
  string status = 3;
  repeated Item items = 4;
}

message CreateOrderResponse {
  int64 id = 1;
  string clientUuid = 2;
  string voucherUuid = 3;
  repeated Item items = 4;
  string status = 5;
  string verificationCode = 6;
  string createdAt = 7;
}

message GetOrderByIDRequest { int64 id = 1; }

message GetOrderByIDResponse {
  int64 id = 1;
  string clientUuid = 2;
  string voucherUuid = 3;
  repeated Item items = 4;
  string status = 5;
  string verificationCode = 6;
  string createdAt = 7;
}

message UpdateOrderRequest {
  int64 id = 1;
  string clientUuid = 2;
  string voucherUuid = 3;
  repeated Item items = 4;
  string status = 5;
  string verificationCode = 6;
  string createdAt = 7;
}

message UpdateOrderResponse {
  int64 id = 1;
  string clientUuid = 2;
  string voucherUuid = 3;
  repeated Item items = 4;
  string status = 5;
  string verificationCode = 6;
  string createdAt = 7;
}

message OrderItem {
  int64 id = 1;
  string clientUuid = 2;
  string voucherUuid = 3;
  repeated Item items = 4;
  string status = 5;
  string verificationCode = 6;
  string createdAt = 7;
}

message GetOrderRequest {}

message GetOrderResponse { repeated OrderItem orders = 1; }

service Order {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrderByID(GetOrderByIDRequest) returns (GetOrderByIDResponse);
  rpc UpdateOrder(UpdateOrderRequest) returns (UpdateOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
}
// end ORDER setup

// start PRODUCT setup
message GetProductByIDRequest { string uuid = 1; }

message GetProductByIDResponse {
  string uuid = 1;
  string name = 2;
  string category = 3;
  string image = 4;
  string description = 5;
  float price = 6;
  string createdAt = 7;
  string deactivatedAt = 8;
}

message CreateProductRequest {
  string name = 1;
  string category = 2;
  string image = 3;
  string description = 4;
  float price = 5;
  string createdAt = 6;
  string deactivatedAt = 7;
}

message CreateProductResponse {
  string uuid = 1;
  string name = 2;
  string category = 3;
  string image = 4;
  string description = 5;
  float price = 6;
  string createdAt = 7;
  string deactivatedAt = 8;
}

message GetProductByCategoryRequest { string category = 1; }

message GetProductByCategoryItem {
  string uuid = 1;
  string name = 2;
  string category = 3;
  string image = 4;
  string description = 5;
  float price = 6;
  string createdAt = 7;
  string deactivatedAt = 8;
}

message GetProductByCategoryResponse {
  repeated GetProductByCategoryItem items = 1;
}

message UpdateProductRequest {
  string uuid = 1;
  string name = 2;
  string category = 3;
  string image = 4;
  string description = 5;
  float price = 6;
  string createdAt = 7;
  string deactivatedAt = 8;
}

message UpdateProductResponse {
  string uuid = 1;
  string name = 2;
  string category = 3;
  string image = 4;
  string description = 5;
  float price = 6;
  string createdAt = 7;
  string deactivatedAt = 8;
}

message DeleteProductByIDRequest { string uuid = 1; }

message DeleteProductByIDResponse { string message = 1; }

service Product {
  rpc GetProductByID(GetProductByIDRequest) returns (GetProductByIDResponse);
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
  rpc GetProductByCategory(GetProductByCategoryRequest)
      returns (GetProductByCategoryResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse);
  rpc DeleteProductByID(DeleteProductByIDRequest)
      returns (DeleteProductByIDResponse);
}
// end PRODUCT setup
